2009-03-08  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry_progress):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the radius of the clearlooks entry progress drawing and do the
	necessary changes in the theme.

2009-03-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry_progress),
	(clearlooks_register_style_classic):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_types.h:
	Support for entry progress drawing.

2009-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Postrelease version bump.

2009-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update for 2.17.4 release.

2009-03-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c: (paint_progress_bar), (draw_box):
	* engines/thinice/src/thinice_theme_draw.c:
	(thinice_style_draw_box):
	* themes/Crux/gtk-2.0/gtkrc:
	* themes/Industrial/gtk-2.0/gtkrc:
	* themes/Mist/gtk-2.0/gtkrc:
	* themes/Redmond/gtk-2.0/gtkrc:
	* themes/ThinIce/gtk-2.0/gtkrc:
	Some improvements for the progressbar in entries. Things could
	certainly be better, but at least this should make it more usable.

2009-02-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Post release bump to 2.17.4.

2009-02-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* Makefile.am:
	Fix distcheck for 2.17.3.

2009-02-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update for 2.17.3 release.

2009-02-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	Draw a "label" focus for expanders. (bug #571835, Till Berger)

2009-02-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* MAINTAINERS:
	Remove Andrew and add Andrea. Also removed some old entries.

2009-02-11  Benjamin Berg  <benjamin@sipsolutions.net>
