@@ -1,3 +1,15 @@
+2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com
+
+	* engines/clearlooks/src/clearlooks_draw.c (clearlooks_draw_entry):
+	* engines/clearlooks/src/clearlooks_draw_gummy.c
+	(clearlooks_gummy_draw_entry):
+	* engines/clearlooks/src/clearlooks_style.c
+	(clearlooks_style_draw_shadow):
+	* engines/clearlooks/src/clearlooks_types.h:
+	* themes/Clearlooks/gtk-2.0/gtkrc:
+	Fixed a regression in the focus color of the GtkEntry introduced with
+	the entry_progress commits.
+
 2009-03-08  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
